--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -13,7 +13,7 @@
           'alt': 'Sprout logo',
           'height': '82',
           'override_inherited_src': true,
-          'src': get_asset_url('../../images/sprout-theme-logo.png'),
+          'src': get_asset_url('../../images/biglytics-logo.png'),
           'width': '205'
         }
       %}
