--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -32,9 +32,11 @@
             path='@hubspot/rich_text'
           %}
             {% module_attribute 'html' %}
-              <div style="text-align: center;">
-                <h1>Sprout Saves Time.</h1>
-                <p>Leverage the intuitive super awesome software that saves you time and will help grow your business.</p>
+              <div style="text-align: center; color: #fff;">
+                <h1 style="color: #fff">Smart Decisions</h1>
+                <h2 style="color: #fff">start with</h2>
+                <h1 style="color: #fff">Smart Data</h1>
+                <p>Our experts do the analysis. You make the decisions.</p>
               </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
@@ -43,7 +45,7 @@
           {% dnd_module
             path='../modules/button',
             button_link='#',
-            button_text='Free Trial',
+            button_text='Get Started',
             horizontal_alignment='CENTER'
           %}
           {% end_dnd_module %}
