--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -54,6 +54,51 @@
     {% end_dnd_section %}
     {# End Banner Section #}
 
+    {# Two-Column Testimonial Section #}
+    {% dnd_section
+      max_width=1024,
+      background_image={
+        'backgroundPosition': 'TOP_CENTER',
+        'backgroundSize': 'cover',
+        'imageUrl': get_asset_url('../images/testimonial-banner.jpg')
+      }
+    %}
+      {% dnd_column
+        offset=0,
+        width=6
+      %}
+        {% dnd_row %}
+          {% dnd_module
+            path='@hubspot/rich_text'
+          %}
+            {% module_attribute 'html' %}
+              <div>
+                <h3 style="text-align: right; color: #fff;">“Biglytics has helped us to better understand our buyer personas and behaviors. As a result - after 6 years - we made it from start-up to scale-up.”</h3>
+                <p style="text-align: right; color: #fff;"><b>Bryan Cooper,</b><br>CEO,SCP</p>
+              </div>
+            {% end_module_attribute %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+      {% end_dnd_column %}
+      {% dnd_column
+        offset=6,
+        width=6
+      %}
+        {% dnd_row %}
+          {% dnd_module
+            path='@hubspot/linked_image',
+            img={
+              'alt': 'Computer and phone',
+              'size_type': 'auto',
+              'src': get_asset_url('../images/bryan.png')
+            }
+          %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+      {% end_dnd_column %}
+    {% end_dnd_section %}
+    {# End Two Column With Image Left Section #}
+
     {# Three Column Feature Section #}
     {% dnd_section %}
       {% dnd_column %}
@@ -174,59 +219,6 @@
     {% end_dnd_section %}
     {# End Three Column Feature Section #}
 
-    {# Two Column With Image Left Section #}
-    {% dnd_section
-      background_color={{ theme.color.secondary.color }}
-    %}
-      {% dnd_column
-        offset=0,
-        width=6
-      %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/linked_image',
-            img={
-              'alt': 'Computer and phone',
-              'size_type': 'auto',
-              'src': get_asset_url('../images/computer.png')
-            }
-          %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-      {% dnd_column
-        offset=6,
-        width=6
-      %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/rich_text'
-          %}
-            {% module_attribute 'html' %}
-              <div>
-                <h2 style="color: #fff;">How It Works</h2>
-                <p style="color: #fff;">We have plenty of resources to help you get learn about our products and services including:</p>
-                <ul style="color: #fff;">
-                  <li>Our blog</li>
-                  <li>Our webinars</li>
-                  <li>A free 15 day trial</li>
-                </ul>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-        {% dnd_row %}
-          {% dnd_module
-            path='../modules/button',
-            button_link='#',
-            button_text='Learn More',
-            horizontal_alignment='LEFT'
-          %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-    {% end_dnd_section %}
-    {# End Two Column With Image Left Section #}
 
     {# Statistics Section #}
     {% dnd_section %}
