--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -140,6 +140,34 @@
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
+        {% dnd_row %}
+          {% dnd_module
+            path='../modules/accordion',
+            offset=0,
+            width=6
+          %}
+          {% end_dnd_module %}
+          {% dnd_module
+            path='../modules/accordion',
+            offset=6,
+            width=6
+          %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+        {% dnd_row %}
+          {% dnd_module
+            path='../modules/accordion',
+            offset=0,
+            width=6
+          %}
+          {% end_dnd_module %}
+          {% dnd_module
+            path='../modules/accordion',
+            offset=6,
+            width=6
+          %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
     {# End Frequently Asked Questions Section #}
