about, pillar, and services

--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -33,7 +33,7 @@
           %}
             {% module_attribute 'html' %}
               <div style="text-align: center">
-                <h1 style="color: #fff; margin-bottom: 0;">How Automation Can Help Your Business</h1>
+                <h1 style="color: #fff; margin-bottom: 0;">How Big Data Can Help Your Business</h1>
               </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
