--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -13,7 +13,7 @@
     {# Banner Section #}
     {% dnd_section
       background_image={
-        'backgroundPosition': 'MIDDLE_CENTER',
+        'backgroundPosition': 'TOP_CENTER',
         'backgroundSize': 'cover',
         'imageUrl': get_asset_url('../images/about-banner.png')
       },
@@ -33,7 +33,8 @@
           %}
             {% module_attribute 'html' %}
               <div style="text-align: center">
-                <h1 style="color: #fff; margin-bottom: 0;">About</h1>
+                <h1 style="color: #fff">The Biglytics Advantage</h1>
+                <p style="color: #fff; font-size: 1.2rem;">Since 2008, Biglytics has been helping clients make more informed business decisions by producing world class industry research reports, coupled with on demand business level data analysis - helping customers to turn big data into big decisions.</p>
               </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
@@ -53,8 +54,8 @@
           %}
             {% module_attribute 'html' %}
               <div>
-                <p style="font-size: 1.2rem;">Our company was started by our two founders 10 years ago. We started out with just two customers and a mission to help people grow their businesses with the power of automation.</p>
-                <p style="font-size: 1.2rem;">We now proudly have well over 10,000 happy customers and are continuing to help more customers grow daily. Our team has grown from two people in a small office to 100 employees spread across the globe.</p>
+                <p style="font-size: 1.2rem;">Biglytics’ world renowned Research Department produces quarterly reports that hundreds of leading medium size business executives count on to understand trends, breakthroughs and new learnings about their industry.</p>
+                <p style="font-size: 1.2rem;">Biglytics’ team of experienced data scientists are on-demand to integrate our data with your unique business data, to form actionable insights that previously would have gone unrealized. Biglytics is continually helping business to shape their communication practices, rethink their marketing plans, enhance their financial strategies and improve operations.</p>
               </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
@@ -62,130 +63,6 @@
       {% end_dnd_column %}
     {% end_dnd_section %}
     {# End About Section #}
-
-    {# Our Mission Section #}
-    {% dnd_section
-      background_color={{ theme.color.secondary.color }}
-    %}
-      {% dnd_column
-        offset=0,
-        width=6
-      %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/linked_image',
-            img={
-              'alt': 'A woman teaching a man how to do something on the computer',
-              'size_type': 'auto',
-              'src': get_asset_url('../images/our-mission.jpg')
-            }
-          %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-      {% dnd_column
-        offset=6,
-        width=6
-      %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/rich_text'
-          %}
-            {% module_attribute 'html' %}
-              <div>
-                <h2 style="color: #fff;">Our Mission</h2>
-                <p style="color: #fff;">Our mission is simple. We want to help as many customers grow their business as possible. We love helping push our customers to new limits that they didn't think possible. With our easy to use software and dedicated services team we will continue to focus on creating the best customer experience possible.</p>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-    {% end_dnd_section %}
-    {# End Our Mission Section #}
-
-    {# Our Values Section #}
-    {% dnd_section %}
-      {% dnd_column
-        offset=0,
-        width=6
-      %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/rich_text'
-          %}
-            {% module_attribute 'html' %}
-              <div>
-                <h2>Our Values</h2>
-                <p>Our values are incredibly important to us. They help us build the right team to achieve our mission. Our core values are:</p>
-                <ul>
-                  <li>Excellence</li>
-                  <li>Empathy</li>
-                  <li>Integrity</li>
-                </ul>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-      {% dnd_column
-        offset=6,
-        width=6
-      %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/linked_image',
-            img={
-              'alt': 'A woman instructing a workshop with her team in an office',
-              'size_type': 'auto',
-              'src': get_asset_url('../images/our-values.jpg')
-            }
-          %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-    {% end_dnd_section %}
-    {# End Our Values Section #}
-
-    {# Our Story Section #}
-    {% dnd_section
-      background_color={{ theme.color.secondary.color }}
-    %}
-      {% dnd_column
-        offset=0,
-        width=6
-      %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/linked_image',
-            img={
-              'alt': 'A group of web developers working on their computers at a table',
-              'size_type': 'auto',
-              'src': get_asset_url('../images/our-story.jpg')
-            }
-          %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-      {% dnd_column
-        offset=6,
-        width=6
-      %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/rich_text'
-          %}
-            {% module_attribute 'html' %}
-              <div>
-                <h2 style="color: #fff;">Our Story</h2>
-                <p style="color: #fff;">Our company was started from a small coffee shop in Nashville, Tennessee. Our founders met at a local technology meetup and both shared a similar mission. One month later the company was created and we moved into our first office.</p>
-                <p style="color: #fff;">Five years later, we have now grown our company to 100 incredible employees around the globe. We still have a small office in Nashville but the majority of our employees work remote.</p>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-    {% end_dnd_section %}
-    {# End Our Story Section #}
 
     {# Meet the Team Section #}
     {% dnd_section %}
@@ -196,7 +73,7 @@
           %}
             {% module_attribute 'html' %}
               <div style="text-align: center;">
-                <h2>Meet Our Team</h2>
+                <h2>Our Team</h2>
               </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
@@ -206,42 +83,56 @@
             path='../modules/team-member',
             horizontal_alignment='CENTER',
             offset=0,
-            team_member_bio='<p>Sarah is a renowned leader in the customer services industry. She has helped several large companies completely turnaround their service departments. Her passion for helping people is what lead her to start this company. In her spare time she loves surfing, hiking, and reading.</p>',
+            width=3,
+            team_member_bio='',
             team_member_image={
-              'src': get_asset_url('../images/team-member-one.jpg'),
-              'alt': 'Sarah Stevens'
+              'src': get_asset_url('../images/team/bryan-desktop.png'),
+              'alt': 'BRYAN COOPER'
             },
-            team_member_name='Sarah Stevens',
-            team_member_position='CEO, Co-Founder',
-            width=4
+            team_member_name='BRYAN COOPER',
+            team_member_position='CEO, SCP'
           %}
           {% end_dnd_module %}
           {% dnd_module
             path='../modules/team-member',
             horizontal_alignment='CENTER',
-            offset=4,
-            team_member_bio='<p>Joshua has over 20 years of experience in the tech industry. He helped start this company in 2014 with the mission of helping people grow. In his spare time he loves hanging out with his kids, going to the beach, and cooking.</p>',
+            offset=3,
+            width=3,
+            team_member_bio='',
             team_member_image={
-              'src': get_asset_url('../images/team-member-two.png'),
-              'alt': 'Joshua Beck'
+              'src': get_asset_url('../images/team/melissa-desktop.png'),
+              'alt': 'MELISSA MEYER'
             },
-            team_member_name='Joshua Beck',
-            team_member_position='CTO, Co-Founder',
-            width=4
+            team_member_name='MELISSA MEYER',
+            team_member_position='Marketing Director'
           %}
           {% end_dnd_module %}
           {% dnd_module
             path='../modules/team-member',
             horizontal_alignment='CENTER',
-            offset=8,
-            team_member_bio='<p>Gene has been a CFO at several medium sized businesses and has a strong background in finance. He loved the mission of the company, so he joined shortly after it was created. In his spare time Gene loves hanging out with his dog, rock climbing, and yoga.</p>',
+            offset=6,
+            width=3,
+            team_member_bio='',
             team_member_image={
-              'src': get_asset_url('../images/team-member-three.jpg'),
-              'alt': 'Gene Maxwell'
+              'src': get_asset_url('../images/team/edward-desktop.png'),
+              'alt': 'EDWARD THOMPSON'
             },
-            team_member_name='Gene Maxwell',
-            team_member_position='CFO',
-            width=4
+            team_member_name='EDWARD THOMPSON',
+            team_member_position='VP of Sales'
+          %}
+          {% end_dnd_module %}
+          {% dnd_module
+            path='../modules/team-member',
+            horizontal_alignment='CENTER',
+            offset=9,
+            width=3,
+            team_member_bio='',
+            team_member_image={
+              'src': get_asset_url('../images/team/louis-desktop.png'),
+              'alt': 'LOUIS FERREL'
+            },
+            team_member_name='LOUIS FERREL',
+            team_member_position='CTO'
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
