--- a/src/templates/partials/header-no-navigation.html
+++ b/src/templates/partials/header-no-navigation.html
@@ -10,10 +10,10 @@
       {% module 'header_logo'
         path='@hubspot/logo',
         img={
-          'alt': 'Sprout logo',
+          'alt': 'Biglytics logo',
           'height': '82',
           'override_inherited_src': true,
-          'src': get_asset_url('../../images/sprout-theme-logo.png'),
+          'src': get_asset_url('../../images/biglytics-logo.png'),
           'width': '205'
         }
       %}
