--- a/src/templates/landing-page.html
+++ b/src/templates/landing-page.html
@@ -14,122 +14,147 @@
 <main class="body-container-wrapper">
   {% dnd_area 'dnd_area' class='body-container body-container--landing-page', label='Main section' %}
 
-    {# Top Offer Section #}
     {% dnd_section
-      background_image={
-        'backgroundPosition': 'TOP_CENTER',
-        'backgroundSize': 'cover',
-        'imageUrl': get_asset_url('../images/landing-page-banner.png')
-      },
-      padding={
-        'top': 45,
-        'right': 0,
-        'bottom': 45,
-        'left': 0
-      }
+      background_color={{ theme.color.body_secondary.color }}
     %}
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module
+            path='@hubspot/rich_text',
+            offset=0,
+            width=12
+          %}
+            {% module_attribute 'html' %}
+              <div style="text-align: center;">
+                <h2 style="color: #f8ac1c;">How to Gain a Competitive Advantage Using Market Analysis</h2>
+                <h3 style="color: #fff">A Step by Step Guide to Making Business Decisions based on Data Science</h3>
+              </div>
+            {% end_module_attribute %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+      {% end_dnd_column %}
+    {% end_dnd_section %}
+
+    {% dnd_section
+      background_color={{ theme.color.body_secondary.color }}
+    %}
+
+      {% dnd_column
+        offset=0,
+        width=6
+      %}
+
+        {# Data Empowerment #}
+        {% dnd_row
+          margin={
+            'bottom': 60
+          }
+        %}
+          {% dnd_module
+            offset=0,
+            width=2,
             path='@hubspot/linked_image',
             horizontal_alignment='CENTER',
             img={
-              'src': get_asset_url('../images/ebook.png'),
-              'alt': 'Ebook cover',
+              'src': get_asset_url('../images/landing/data_icon.png'),
+              'alt': 'Data',
               'size_type': 'auto'
-            },
-            offset=0,
-            width=4
+            }
           %}
           {% end_dnd_module %}
           {% dnd_module
+            offset=2,
+            width=10,
             path='@hubspot/rich_text',
-            horizontal_alignment='LEFT',
-            offset=4,
-            width=4
+            horizontal_alignment='LEFT'
           %}
             {% module_attribute 'html' %}
-              <div>
-                <h4>Increase Your Productivity</h4>
-                <h2>10 Things to Save Time</h2>
-                <p>Learn how you can save time and increase productivity by automating your simple daily tasks.</p>
-              </div>
+              <h4 style="color: #fff;">Data Empowerment</h4>
+              <p style="color: #fff;">Use data to your advantage to out-match your competitors</p>
             {% end_module_attribute %}
           {% end_dnd_module %}
+        {% end_dnd_row %}
+
+        {# Gain Intelligence #}
+        {% dnd_row
+          margin={
+            'bottom': 60
+          }
+        %}
+          {% dnd_module
+            offset=0,
+            width=2,
+            path='@hubspot/linked_image',
+            horizontal_alignment='CENTER',
+            img={
+              'src': get_asset_url('../images/landing/lightbulb.png'),
+              'alt': 'Data',
+              'size_type': 'auto'
+            }
+          %}
+          {% end_dnd_module %}
+          {% dnd_module
+            offset=2,
+            width=10,
+            path='@hubspot/rich_text',
+            horizontal_alignment='LEFT'
+          %}
+            {% module_attribute 'html' %}
+              <h4 style="color: #fff;">Gain Intelligence</h4>
+              <p style="color: #fff;">Use valuable insights to power informed business decisions</p>
+            {% end_module_attribute %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+
+        {# Value #}
+        {% dnd_row
+          margin={
+            'bottom': 60
+          }
+        %}
+          {% dnd_module
+            offset=0,
+            width=2,
+            path='@hubspot/linked_image',
+            horizontal_alignment='CENTER',
+            img={
+              'src': get_asset_url('../images/landing/value_icon.png'),
+              'alt': 'Data',
+              'size_type': 'auto'
+            }
+          %}
+          {% end_dnd_module %}
+          {% dnd_module
+            offset=2,
+            width=10,
+            path='@hubspot/rich_text',
+            horizontal_alignment='LEFT'
+          %}
+            {% module_attribute 'html' %}
+              <h4 style="color: #fff;">Value</h4>
+              <p style="color: #fff;">Turn bigger profits faster using data science decisions</p>
+            {% end_module_attribute %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+
+      {% end_dnd_column %}
+
+      {# Form section #}
+      {% dnd_column
+        offset=6,
+        width=6
+      %}
+        {% dnd_row %}
           {% dnd_module
             path='@hubspot/form',
             horizontal_alignment='CENTER',
-            offset=8,
-            title='Yes! Send Me the Ebook!',
-            width=4
+            title='Download our FREE eBook to get started with Big Data decisions today!'
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
-    {% end_dnd_section %}
-    {# End Top Offer Section #}
 
-    {# Bottom Offer Description Section #}
-    {% dnd_section
-      background_color={{ theme.color.secondary.color }}
-    %}
-      {% dnd_column %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/rich_text'
-          %}
-            {% module_attribute 'html' %}
-              <h2 style="color: #fff;">What's Inside?</h2>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/rich_text',
-            offset=0,
-            width=4
-          %}
-            {% module_attribute 'html' %}
-              <div>
-                <ul style="color: #fff;">
-                  <li>A free copy of our extensive eBook guide with tips on how you can increase your productivity by automating your daily tasks.</li>
-                  <li>An exclusive link to our online community so that you can discuss what you learn with a group of like-minded individuals.</li>
-                </ul>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-          {% dnd_module
-            path='@hubspot/rich_text',
-            offset=4,
-            width=4
-          %}
-            {% module_attribute 'html' %}
-              <div>
-                <ul style="color: #fff;">
-                  <li>An extended free trial of our software so that you can immediately put some of these tips into action.</li>
-                  <li>Access to our online support chat so that you can ask any questions that you may have after reading through the eBook.</li>
-                </ul>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-          {% dnd_module
-            path='@hubspot/rich_text',
-            offset=8,
-            width=4
-          %}
-            {% module_attribute 'html' %}
-              <div>
-                <ul style="color: #fff;">
-                  <li>Links to all of our open resources so that you can continue to learn after reading through this eBook.</li>
-                  <li>A free calendar browser extension so that you can track your progress as you begin to automate your tasks.</li>
-                </ul>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
     {% end_dnd_section %}
-
 
   {% end_dnd_area %}
 </main>
