use token replace for landing page

--- a/src/templates/landing-page.html
+++ b/src/templates/landing-page.html
@@ -150,6 +150,9 @@
             horizontal_alignment='CENTER',
             title='Download our FREE eBook to get started with Big Data decisions today!'
           %}
+            {% module_attribute 'form_id' %}
+              {# ddg:info_form_id #}
+            {% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
